2005-11-19  Michael Stucki  <michael@typo3.org>

	* Fixed bug #1861: Call of inexinsting t3lib_exec::imageMagickCommand() instead of t3lib_div::...

2006-11-18  Michael Scharkow  <mscharkow@gmx.net>

	* Removed bgColor from default body tag

2006-11-17  Robert Lemke  <robert@typo3.org>

	* Added two post-processing hooks into t3lib_tcemain->moveRecord. They are required by TemplaVoila 1.0

2006-11-15  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #569: The "Access Key" combination now added to the "title" attribute of images
	* Fixed bug #815: CLI-mode doesn't work with lockSSL enabled
	* New feature #1518: override all admin panel values from TSConfig

2005-11-12  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* New feature #1573: switch back to admin user after user switch (SU-mode)

2005-11-11  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* New feature #1519: new option for lockSSL: get redirected to standard http after BE login with SSL
	* Fixed bug #1624: Copying of a file in the same folder in the "Filelist" module dosen't work
	* Feature request #1706: add "save + close" button in RTE wizard

2005-11-09  Rupert Germann  <rupi@gmx.li>

	* Fix for function getBorderAttr: closes bugs 1360 and 1461

2005-11-09  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* New feature #1577: display clickmenus with XMLHTTP / ajax
	* Fixed bug 1066: Shortcut to a invisible page leads to a frontend error

2005-11-09  Ingmar Schlecht  <ingmar@typo3.org>

	* Made TCEForms put <label> tags around icons for moving/deleting repetitive Flexform items
	* Removed annoying feature of typo3/tab.js to focus the textarea

2005-11-08  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #586: User Admin can't create new user
	* Fixed bug #1293: TCAdefaults.pages.doktype is not recognized by the wizard "Create new pages"
	* Fixed bug #1407: clearCache doesn't work when deleting records