@@ -1069,9 +1069,29 @@ class tslib_cObj {
 				$tablecode.='</tr>';	// ending row
 			}
 			if ($c)	{
-				// Table-tag is inserted
-				$i=$contentPosition;
-				$table_align = (($i==16) ? 'align="'.$align.'"' : '');
+				switch ($contentPosition)	{
+					case '0':	// above
+					case '8':	// below
+						switch ($align)        {	// These settings are needed for Firefox
+							case 'center':
+								$table_align = 'margin-left: auto; margin-right: auto';
+							break;
+							case 'right':
+								$table_align = 'margin-left: auto; margin-right: 0px';
+							break;
+							default:	// Most of all: left
+								$table_align = 'margin-left: 0px; margin-right: auto';
+						}
+						$table_align = 'style="'.$table_align.'"';
+					break;
+					case '16':	// in text
+						$table_align = 'align="'.$align.'"';
+					break;
+					default:
+						$table_align = '';
+				}
+
+					// Table-tag is inserted
 				$tablecode = '<table'.($tableWidth?' width="'.$tableWidth.'"':'').' border="0" cellspacing="0" cellpadding="0" '.$table_align.' class="imgtext-table">'.$tablecode;
 				if ($editIconsHTML)	{	// IF this value is not long since reset.
 					$tablecode.='<tr><td colspan="'.$colspan.'">'.$editIconsHTML.'</td></tr>';
@@ -2609,7 +2629,15 @@ class tslib_cObj {
 				if ($conf['title']) {$params.='&title='.rawurlencode($conf['title']);}
 				if ($conf['wrap']) {$params.='&wrap='.rawurlencode($conf['wrap']);}
 
-				$md5_value = md5($imageFile.'|'.$conf['width'].'|'.$conf['height'].'|'.$conf['effects'].'|'.$GLOBALS['TYPO3_CONF_VARS']['SYS']['encryptionKey'].'|');
+				$md5_value = md5(
+						$imageFile.'|'.
+						$conf['width'].'|'.
+						$conf['height'].'|'.
+						$conf['effects'].'|'.
+						$conf['bodyTag'].'|'.
+						$conf['title'].'|'.
+						$conf['wrap'].'|'.
+						$GLOBALS['TYPO3_CONF_VARS']['SYS']['encryptionKey'].'|');
 
 				$params.= '&md5='.$md5_value;
 				$url = $GLOBALS['TSFE']->absRefPrefix.'showpic.php?file='.rawurlencode($imageFile).$params;
