@@ -6,16 +6,14 @@ CHANGES & IMPROVEMENTS in TYPO3 4.0
 Access Control
 ===============
 
-	* FE-groups are now nested and content elements. Additionally, pages can have more than one group assigned. (Michael Stucki <michael@typo3.org> integrating extension "fenestgrp" by Glen Gibb and extension "ingmar_accessctrl" by Ingmar Schlecht)
+	* FE-groups are now nested and content elements. Additionally, pages can have more than one group assigned. (Michael Stucki, integrating extension "fenestgrp" by Glen Gibb and extension "ingmar_accessctrl" by Ingmar Schlecht)
 
 Compatibility
 ==============
 
-	* GMENU_LAYERS and TMENU_LAYERS and image rollovers now work with Opera browsers (Martin Kutschker <martin.t.kutschker@blackbox.net>)
-
-2005-07-02
+	* GMENU_LAYERS and TMENU_LAYERS and image rollovers now work with Opera browsers (Martin Kutschker)
 
 Security
 =========
 
-	* A debug script exposed system information provided by phpinfo(). For details, see http://typo3.org /teams/security/security-bulletins/typo3-20050725-1/ (Michael Stucki <michael@typo3.org>)
+	* A debug script exposed system information provided by phpinfo(). For details, see http://typo3.org /teams/security/security-bulletins/typo3-20050725-1/ (Michael Stucki)
